tests/agl/rejections/type/discarded_explicit_typed_ask.agl
def demonstrate() -> unit =
  ask::[text]("Produce a value.")
  ()

demonstrate()
